--- a/index.html
+++ b/index.html
@@ -3,8 +3,32 @@
   <head>
     <meta charset="utf-8">
     <title>Home</title>
+    <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    
+    <nav>
+      <ul class="global-nav">
+        <li class="global-logo"><a href="#">logo</a></li>
+        <li><a href="#">Store</a></li>
+        <li><a href="#">Mac</a></li>
+        <li><a href="#">Ipod</a></li>
+        <li><a href="#">Iphone</a></li>
+        <li><a href="#">Ipad</a></li>
+        <li><a href="#">ITunes</a></li>
+        <li><a href="#">Support</a></li>
+      </ul>
+      <div class="global-search">
+        <form class="search" action="index.html" method="post">
+          <input type="search" name="" value="">
+        </form>
+		 </div>
+    </nav>
+    <article class="billboard">
+      <div class="centered">
+        <a href="#"><img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small.png" alt="What will your verse be?" width="980" height="104"></a>
+        <a href="#"><img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small.png" alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story." width="980" height="82"></a>
+        <a href="#"><img class="medium" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/cta_your_verse_27pt.png" alt="Watch the “Your Verse” film and explore the stories" width="980" height="64"></a>      
+      </div>
+    </article>
   </body>
 </html>
