--- a/index.html
+++ b/index.html
@@ -27,8 +27,14 @@
       <div class="centered">
         <a href="#"><img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small.png" alt="What will your verse be?" width="980" height="104"></a>
         <a href="#"><img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small.png" alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story." width="980" height="82"></a>
-        <a href="#"><img class="medium" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/cta_your_verse_27pt.png" alt="Watch the “Your Verse” film and explore the stories" width="980" height="64"></a>      
+        <a href="#"><img class="medium" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/cta_your_verse_27pt.png" alt="Watch the “Your Verse” film and explore the stories" width="980" height="64"></a>
       </div>
     </article>
+    <div class="products">
+      <img src="image/promo_30_years.jpg" alt="">
+      <img src="image/promo_iphone5c.jpg" alt="">
+      <img src="image/promo_iphone5s.jpg" alt="">
+      <img src="image/promo_supplier_responsibility.jpg" alt="">
+    </div>
   </body>
 </html>
