added the footer and the style

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>Apple</title>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
     <nav>
       <ul class="global-nav">
-        <li class="global-logo"><a href="#">logo</a></li>
+        <li class="global-logo"><a href="#"><i class='fab fa-apple'></i></a></li>
         <li><a href="#">Store</a></li>
         <li><a href="#">Mac</a></li>
         <li><a href="#">Ipod</a></li>
@@ -19,15 +20,16 @@
       </ul>
       <div class="global-search">
         <form class="search" action="index.html" method="post">
+          <i class='fas fa-search'></i>
           <input type="search" name="" value="">
         </form>
 		 </div>
     </nav>
     <article class="billboard">
       <div class="centered">
-        <a href="#"><img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small.png" alt="What will your verse be?" width="980" height="104"></a>
-        <a href="#"><img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small.png" alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story." width="980" height="82"></a>
-        <a href="#"><img class="medium" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/cta_your_verse_27pt.png" alt="Watch the “Your Verse” film and explore the stories" width="980" height="64"></a>
+        <img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small.png" alt="What will your verse be?">
+        <img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small.png" alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story.">
+        <a class="text-centered" href="#">Watch the “Your Verse” film and explore the stories <i class='far fa-play-circle'></i></a>
       </div>
     </article>
     <div class="products">
@@ -36,5 +38,31 @@
       <img src="image/promo_iphone5s.jpg" alt="">
       <img src="image/promo_supplier_responsibility.jpg" alt="">
     </div>
+    <footer>
+
+    	<div class="wrapper">
+        <div class="clear left">
+          <p>Shop the <a href="https://web.archive.org/web/20140301004610/http://store.apple.com/us" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://store.apple.com/us_1&quot;;return this.s_oc?this.s_oc(e):true">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="/web/20140301004610/http://www.apple.com/retail/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/retail/_1&quot;;return this.s_oc?this.s_oc(e):true">Apple Retail Store</a>, or find a <a href="/web/20140301004610/http://www.apple.com/buy/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/buy/_1&quot;;return this.s_oc?this.s_oc(e):true">reseller</a>.</p><br><br><br>
+          <p class="copyright">Copyright © 2014 Apple Inc. All rights reserved.
+            <a href="/web/20140301004610/http://www.apple.com/legal/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/legal/_1&quot;;return this.s_oc?this.s_oc(e):true">Terms of Use</a>
+            <a href="/web/20140301004610/http://www.apple.com/legal/privacy/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/legal/privacy/_1&quot;;return this.s_oc?this.s_oc(e):true">Privacy Policy</a>
+            </p>
+        </div>
+        <div class="right">
+          <ul>
+            <li><a href="/web/20140301004610/http://www.apple.com/sitemap/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/sitemap/_1&quot;;return this.s_oc?this.s_oc(e):true">Site Map</a></li>
+            <li><a href="/web/20140301004610/http://www.apple.com/hotnews/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/hotnews/_1&quot;;return this.s_oc?this.s_oc(e):true">Hot News</a></li>
+            <li><a href="/web/20140301004610/http://www.apple.com/rss/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/rss/_1&quot;;return this.s_oc?this.s_oc(e):true">RSS Feeds</a></li>
+            <li><a href="/web/20140301004610/http://www.apple.com/pr/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/pr/_1&quot;;return this.s_oc?this.s_oc(e):true">Media Info</a></li>
+            <li><a href="/web/20140301004610/http://www.apple.com/environment/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/environment/_1&quot;;return this.s_oc?this.s_oc(e):true">Environment</a></li>
+            <li><a href="/web/20140301004610/http://www.apple.com/jobs/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/jobs/_1&quot;;return this.s_oc?this.s_oc(e):true">Job Opportunities</a></li>
+            <li><a href="/web/20140301004610/http://www.apple.com/contact/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/contact/_1&quot;;return this.s_oc?this.s_oc(e):true">Contact Us</a></li>
+            <li class="worldwide">
+            <a href="/web/20140301004610/http://www.apple.com/choose-your-country/" onclick="s_objectID=&quot;https://web.archive.org/web/20140301004610/http://www.apple.com/choose-your-country/_1&quot;;return this.s_oc?this.s_oc(e):true"><img src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/global/elements/flags/16x16/usa.png" alt="Choose your country or region" width="16" height="16"></a>
+            </li>
+          </ul>
+        </div>
+    	</div>
+    </footer>
   </body>
 </html>
