--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
       <div class="global-search">
         <form class="search" action="index.html" method="post">
           <i class='fas fa-search'></i>
-          <input type="search" name="" value="">
+          <input type="search" name="search" value="">
         </form>
 		 </div>
     </nav>
-    <article class="billboard">
+    <div class="billboard">
       <div class="centered">
         <img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small.png" alt="What will your verse be?">
         <img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small.png" alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story.">
@@ -33,9 +33,9 @@
       </div>
     </article>
     <div class="products">
-      <img src="image/promo_30_years.jpg" alt="">
-      <img src="image/promo_iphone5c.jpg" alt="">
       <img src="image/promo_iphone5s.jpg" alt="">
+      <img src="image/promo_iphone5c.jpg" alt="">
+      <img src="image/promo_30_years.jpg" alt="">
       <img src="image/promo_supplier_responsibility.jpg" alt="">
     </div>
     <footer>
