--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small.png" alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story.">
         <a class="text-centered" href="#">Watch the “Your Verse” film and explore the stories <i class='far fa-play-circle'></i></a>
       </div>
-    </article>
+    </div>
     <div class="products">
       <img src="image/promo_iphone5s.jpg" alt="">
       <img src="image/promo_iphone5c.jpg" alt="">
