implemented the bottom images as links

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
       </div>
     </div>
     <div class="products">
-      <img src="image/promo_iphone5s.jpg" alt="">
-      <img src="image/promo_iphone5c.jpg" alt="">
-      <img src="image/promo_30_years.jpg" alt="">
-      <img src="image/promo_supplier_responsibility.jpg" alt="">
+      <a href="#"><img src="image/promo_iphone5s.jpg" alt=""></a>
+      <a href="#"><img src="image/promo_iphone5c.jpg" alt=""></a>
+      <a href="#"><img src="image/promo_30_years.jpg" alt=""></a>
+      <a href="#"><img src="image/promo_supplier_responsibility.jpg" alt=""></a>
     </div>
     <footer>
 
