--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <div class="centered">
         <img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_title_small.png" alt="What will your verse be?">
         <img class="small" src="https://web.archive.org/web/20140301004610im_/http://images.apple.com/home/images/your_verse_subhead_small.png" alt="Everyone has something to share. See how people are using iPad in their unique ways to add to the world’s story.">
-        <a class="text-centered" href="#">Watch the “Your Verse” film and explore the stories <i class='far fa-play-circle'></i></a>
+        <a class="text-centered" href="#">Watch the Your Verse film and explore the stories <i class='far fa-play-circle'></i></a>
       </div>
     </div>
     <div class="products">
